--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,7 +33,9 @@ jobs:
           path: build
       - name: Commands
         run: |
-          cd build;
           ls;
+          docker build .;
+
+
 
 
