--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Commands
         run: |
           ls;
-          docker build .;
+          docker build -t my .;
+          docker run my;
 
 
 
